--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          
 
            <div class="coding">
-               <img src="images/code.jpg" width="400px">
+               <img src="images/rejo.jpg" width="400px">
            </div>
            
 
